# cs457

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  bmp_to_texture.cpp  bmp_to_texture.h  camera.h  carousel_horse.cpp  display_lists.cpp  display_lists.h  glslprogram.cpp  glslprogram.h  keytime.cpp  light.h  loadobjfile.cpp  loadobjfile.h  main.cpp  material.h  menu.h  osucone.cpp  osutorus.h  plane.cpp  plane.h  utils.cpp  utils.h  world.cpp  world.h
CMakeProject1/: CMakeLists.txt  README.md  Sphere.cpp  Sphere.h  carousel_horse.h  display_lists.cpp  display_lists.h  glslprogram.cpp  glslprogram.h  keytime.h  light.cpp  main.cpp  material.cpp  menu.cpp  osucone.h  osusphere.cpp  osusphere.h  osutorus.cpp  pika.h  plane.cpp  scene.h  shader.h  utils.h  world.cpp  world.h
CMakeProject1/shaders/: pattern.frag  pattern.vert
shaders/: pattern.frag  pattern.vert
